# Proposal-agents

./: README.md  pyproject.toml  skills-lock.json
.agents/skills/openai-agents-sdk/: SKILL.md
.agents/skills/openai-agents-sdk/references/: agents.md  sessions.md  structured-output.md
apps/worker/: main.py
docs/adr/: 001-agent-orchestration-langgraph.md  001-orquestacion-agentes-langgraph.md
docs/architecture/: overview.md  technical_details.md  vision_general.md
libs/adapters/: base.py  context.py  crm_adapter.py  erp_adapter.py  messaging_adapters.py
libs/communication/: message_bus.py
libs/contracts/: models.py
libs/guardrails/: idempotency.py
libs/memory/: chroma_store.py
libs/ml/: local_inference.py  pytorch_wrapper.py
libs/persistence/: database.py
libs/telemetry/: logger.py  metrics.py  mlflow_tracker.py
libs/tenants/: config.py
scratch/: init_structure.py
services/aggregator_service/: aggregator_node.py
services/escalation_service/: escalation_expert_node.py  service.py
services/fia_service/: fia_node.py
services/model_gateway/: api.py
services/outcome_tracker/: tracker.py
services/policy_engine/: engine.py
services/priority_engine/: engine.py
services/risk_service/: risk_node.py
services/router_service/: router_node.py
services/sea_service/: sea_node.py
services/signal_normalizer/: pyspark_job.py
services/workflow_engine/: graph.py  state.py
tests/: test_moe_workflow.py
tests/e2e/: test_error_handling.py
tests/integration/: test_full_workflow.py
tests/unit/: test_contracts.py
