[project]
name = "dataizen-agents"
version = "0.1.0"
description = "Revenue Automation Agentic Platform"
authors = [
    {name = "Staff Engineer", email = "staff@dataizen.ai"}
]
dependencies = [
    "pydantic>=2.0.0",
    "langgraph>=0.0.10",
    "mlflow>=2.0.0",
    "pyspark>=3.4.0",
    "torch>=2.0.0",
    "chromadb>=0.4.0",
    "asyncio>=3.4.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
