[project]
name = "dataizen-agents"
version = "0.1.0"
description = "Revenue Automation Agentic Platform"
authors = [
    {name = "Staff Engineer", email = "staff@dataizen.ai"}
]
dependencies = [
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "mlflow>=2.0.0",
    "chromadb>=0.4.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "httpx>=0.24.0",
    "sentence-transformers>=2.2.0",
    "redis>=5.0.0",
    "asyncpg>=0.28.0",
    "numpy>=1.24.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "aiohttp>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
